--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     src: url(./assets/Norse-Bold.otf);
 }
 
+:root {
+    --primary-color: rgb(188, 204, 216);
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -10,11 +14,13 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100vh;
+    overflow: hidden;
+}
 
 body {
     display: flex;
-    height: 100vh;
-    overflow: hidden;
 }
 
 /* left panel */
@@ -22,7 +28,7 @@ body {
 .left {
     width: 40%;
     height: 100%;
-    position: relative;
+    position: fixed;
 }
 
 .background-image {
@@ -72,5 +78,103 @@ body {
 /* right panel */
 
 .right {
-    width: 60%;
+    height: 100%;
+    overflow-y: auto;
+    margin: 0 5% 0 45%;
+    padding: 32px 0;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100%;
+}
+
+.wrapper > p {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin: 8px 0;
+}
+
+form {
+    margin: 40px 0 0;
+}
+
+.container {
+    border-left: 3px solid var(--primary-color);
+    border-radius: 3px;
+    padding: 16px 0 8px 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin-bottom: 24px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: rgb(126, 124, 124);
+}
+
+.input-container {
+    display: flex;
+    flex-flow: column wrap;
+    height: 190px;
+    justify-content: space-around;
+    width: 440px;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    margin: 8px 32px 8px 0;
+    width: 180px;
+}
+
+.input > label {
+    font-size: 0.7rem;
+    font-weight: bold;
+    color: gray;
+}
+
+.input > input {
+    border: 1px solid rgb(202, 200, 200);
+    border-radius: 3px;
+    padding: 4px;
+}
+
+.input > input:hover {
+    border-color: black;
+}
+
+.input > input:focus {
+    border-color: blue;
+    box-shadow: 1px 1px 3px gray;
+    outline: none;
+}
+
+.input > input:invalid {
+    border-color: red;
+}
+
+form > button {
+    border: none;
+    border-radius: 8px;
+    background-color: var(--primary-color);
+    padding: 8px 32px;
+    color: white;
+    font-size: 1rem;
+    margin-bottom: 24px;
+}
+
+form > button:hover {
+    filter: brightness(0.95);
+}
+
+.log-in {
+    font-size: 0.9rem;
+}
+
+.log-in > a {
+    text-decoration: none;
+    color: var(--primary-color);
+    font-weight: bold;
 }
